# mlops-examples

./: .gitignore  .pre-commit-config.yaml  README.md
oxford-mlops-example-2025/: Makefile
oxford-mlops-example-2025/mlflow/: openai-completions-example.py  pyproject.toml
oxford-mlops-example-2025/mlflow/mlruns/0/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/394346b78a8a476789e0c974dfb10df2/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/394346b78a8a476789e0c974dfb10df2/tags/: mlflow.runName  mlflow.source.git.commit
oxford-mlops-example-2025/mlflow/mlruns/0/af9a37f809da475a8cba4c874418836a/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/af9a37f809da475a8cba4c874418836a/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
oxford-mlops-example-2025/mlflow/mlruns/0/b7be6a80e8fc401abfa6f560c5c5bcf1/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/c116d35994a6472faed93c2deaf1f557/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/c46e13c2783043d792b4571daa8a41fa/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/d259c19880dd423eb0112f350286b79b/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/e902676b7555493bb74e262905de2a94/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/0/fb0eccc5265b4a27ae2a2092dbcc41b9/: meta.yaml
oxford-mlops-example-2025/mlflow/mlruns/models/model-1/: meta.yaml
src/oxford-mlops-example-2025/mlops-pipeline/: Dockerfile  README.md  pyproject.toml  run.py
src/oxford-mlops-example-2025/mlops-pipeline/mlops_pipeline/: data.py  model.py  monitor.py
(+71 files in other folders)
